--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
-
+/vendor/*/*
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -24,3 +24,4 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
